# d100_d400_income_predict

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .test_setup.py  Dockerfile  README.md  eda_cleaning.ipynb  environment.yml  pyproject.toml  test_setup.py
.github/workflows/: pr_checks.yml
src/benchmarks/: benchmark_csv_parquet.py  benchmark_pandas_polars.py
src/income_predict/: cleaning.py  data.py  evaluation.py  model_training.py  plotting.py  preprocessing.py  training_pipeline.py
src/income_predict_d100_d400/: cleaning.py  data.py  evaluation.py  feature_engineering.py  model_training.py  pipeline_summary.py  plotting.py  preprocessing.py  robust_paths.py  training_pipeline.py
src/income_predict_d100_d400/eda/: preprocessing.py
src/income_predict_d100_d400/final_report/: plots.py
src/notebooks/: eda_cleaning.ipynb  final_report.ipynb
src/notebooks/visualisations/: confusion_matrix.py  eda_plots.py  model_comparrison.py
src/tests/: benchmark_csv_parquet.py  benchmark_pandas_polars.py  test_cleaning.py  test_feature_engineering.py
