[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "income_predict"
version = "0.1.0"
description = "My installable package for income prediction"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
